--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "git-pull",
-  "version": "0.0.1",
+  "name": "jsgit-pull",
+  "version": "0.0.2",
   "description": "A simple-stream transform that implements the git pull protocol over a socket.",
   "main": "git-pull.js",
   "dependencies": {
